# packages/types/src/index.ts
@@ -7,4 +7,5 @@ export * from './api';
 export * from './config';
 export * from './prisma';
 export * from './logger';
+export * from './invitation';
 
